[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Character.gd" type="Script" id=1]
[ext_resource path="res://scenes/CharacterArea.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Character" type="Node2D"]
script = ExtResource( 1 )

[node name="BulletTimer" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionArea" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource( 1 )
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="die" from="CollisionArea" to="." method="_on_CollisionArea_die"]
